--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,7 @@
   color: white !important;
 }
 
-.nav-link:hover {
+a:hover {
     color: rgb(163, 162, 162) !important;
 }
 
@@ -33,4 +33,8 @@ nav {
 
 footer {
   height: 100px;
+}
+
+p {
+  font-size: 13px;
 }
