--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,7 @@
 }
 
 .nav-link.active, .nav-link.active:hover, footer {
-  background-color: rgb(87, 25, 105) !important;
+  background-color: rgb(41, 0, 53) !important;
   color: white !important;
 }
 
@@ -21,7 +21,7 @@ body {
 }
 
 main {
-  background-color: rgb(38, 0, 47);
+  background-color: rgb(63, 13, 78);
   color: white;
   padding: 10px;
   margin: 5px;
@@ -36,5 +36,10 @@ footer {
 }
 
 p {
-  font-size: 13px;
+  font-size: 14px;
+  text-align: center;
+}
+
+h6 {
+  font-size: 16px !important;
 }
